# mapo

./: .gitignore  CLAUDE.md  OVERLAY_REBUILD_PLAN.md  OVERLAY_TOOLBAR_PLAN.md  PHASE_6_MOTION_CAPTURE_PLAN.md  SINGLE_SCREEN_REFACTOR_PLAN.md  SOURCE_MODE_SETTINGS_SPEC.txt  STEAM_INPUT_PARITY_PLAN.md  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mapo/: HiltTestRunner.kt
app/src/androidTest/java/com/mappo/: HiltTestRunner.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mapo/: MainActivity.kt  MapoApplication.kt
app/src/main/java/com/mapo/di/: AppModule.kt  CoroutineModule.kt  SteamModule.kt
app/src/main/java/com/mapo/service/: InputAccessibilityService.kt  ToolbarTileService.kt
app/src/main/java/com/mapo/ui/: Gestures.kt
app/src/main/java/com/mappo/: MainActivity.kt  MappoApplication.kt
app/src/main/java/com/mappo/di/: AppModule.kt  CoroutineModule.kt  SteamModule.kt
app/src/main/java/com/mappo/service/: InputAccessibilityService.kt  ToolbarTileService.kt
app/src/main/java/com/mappo/ui/: Gestures.kt  ImeBehavior.kt
app/src/main/java/com/pcpad/: MainActivity.kt  PcPadApplication.kt
app/src/main/java/com/pcpad/di/: AppModule.kt
app/src/main/java/com/pcpad/service/: InputAccessibilityService.kt
app/src/main/res/anim/: drawer_slide_in.xml  drawer_slide_out.xml  dropdown_enter.xml  dropdown_exit.xml  hold.xml
app/src/main/res/drawable/: controller_generic.xml  flair_circle_8.xml  flair_circle_target_a.xml  flair_circle_target_b.xml  flair_disabled.xml  flair_small_rotate.xml  generic_button_circle.xml  generic_button_trigger_a.xml  generic_stick.xml  ic_keyboard_overlay.xml  ic_toolbar_tile.xml  lucide_play_filled.xml  lucide_rotate_3d.xml  mode_banner_placeholder.xml  mouse_scroll_vertical.xml  mouse_small.xml  switch_buttons.xml  touch_swipe_move.xml  touch_tap.xml  xbox_button_a_outline.xml  xbox_button_b_outline.xml  xbox_button_color_a.xml  xbox_button_color_b.xml  xbox_button_color_x.xml  xbox_button_color_y.xml  xbox_button_menu.xml  xbox_button_menu_outline.xml  xbox_button_view.xml  xbox_button_view_outline.xml  xbox_button_x_outline.xml  xbox_button_y_outline.xml  xbox_dpad.xml  xbox_dpad_down.xml  xbox_dpad_down_outline.xml  xbox_dpad_left.xml  xbox_dpad_left_outline.xml  xbox_dpad_right.xml  xbox_dpad_right_outline.xml  xbox_dpad_up.xml  xbox_dpad_up_outline.xml  (+20 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/mapo/shizuku/: LinuxInputConstantsTest.kt
app/src/test/java/com/mapo/ui/: ComposeSmokeTest.kt
app/src/test/java/com/mappo/shizuku/: LinuxInputConstantsTest.kt
app/src/test/java/com/mappo/ui/: ComposeSmokeTest.kt
gradle/: libs.versions.toml
input-shared/: build.gradle.kts
input-shared/src/main/: AndroidManifest.xml
input-shared/src/main/aidl/com/mapo/shizuku/: IMapoInputCallback.aidl  IMapoInputService.aidl  InjectKeyRequest.aidl  RawAnalogEvent.aidl  ShizukuServiceHealth.aidl
input-shared/src/main/aidl/com/mappo/shizuku/: IMappoInputCallback.aidl  IMappoInputService.aidl  InjectKeyRequest.aidl  RawAnalogEvent.aidl  ShizukuServiceHealth.aidl
input-shared/src/main/java/com/mapo/shizuku/: InjectKeyRequest.kt  InputSourceId.kt  LinuxInputConstants.kt  RawAnalogEvent.kt  ShizukuServiceHealth.kt
scripts/: redeploy.sh
shizuku-service/: build.gradle.kts
shizuku-service/src/main/: AndroidManifest.xml
shizuku-service/src/main/cpp/: CMakeLists.txt  evdev.c  uinput.c  uinput_gamepad.c  uinput_stylus.c
steam-client/: build.gradle.kts
steam-client/src/main/: AndroidManifest.xml
themestudio/: build.gradle.kts
themestudio/src/main/assets/fonts/restricted/: LICENSE.txt
themestudio/src/main/res/raw/: google_fonts.txt
(+607 files in other folders)
